fastmetrics-derive/tests/ui/fail/register/skip_cannot_coexist_with_other_attrs.stderr
error: `skip` attribute cannot coexist with other attributes
  --> tests/ui/fail/register/skip_cannot_coexist_with_other_attrs.rs:10:5
   |
10 |     #[register(rename = "http_requests", skip)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
